EXTRA_DIST = \
	libevtx.pmdoc/01bin.xml.in \
	libevtx.pmdoc/01bin-contents.xml \
	libevtx.pmdoc/02include.xml.in \
	libevtx.pmdoc/02include-contents.xml \
	libevtx.pmdoc/03lib.xml.in \
	libevtx.pmdoc/03lib-contents.xml \
	libevtx.pmdoc/04share.xml.in \
	libevtx.pmdoc/04share-contents.xml \
	libevtx.pmdoc/05python.xml.in \
	libevtx.pmdoc/05python-contents.xml \
	libevtx.pmdoc/index.xml \
	libevtx.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libevtx.pmdoc/01bin.xml
	/bin/rm -f libevtx.pmdoc/02include.xml
	/bin/rm -f libevtx.pmdoc/03lib.xml
	/bin/rm -f libevtx.pmdoc/04share.xml
	/bin/rm -f libevtx.pmdoc/05python.xml
	/bin/rm -f libevtx.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

