MSVSCPP_FILES = \
	evtx_test_chunk/evtx_test_chunk.vcproj \
	evtx_test_chunks_table/evtx_test_chunks_table.vcproj \
	evtx_test_error/evtx_test_error.vcproj \
	evtx_test_file/evtx_test_file.vcproj \
	evtx_test_io_handle/evtx_test_io_handle.vcproj \
	evtx_test_notify/evtx_test_notify.vcproj \
	evtx_test_record/evtx_test_record.vcproj \
	evtx_test_record_values/evtx_test_record_values.vcproj \
	evtx_test_support/evtx_test_support.vcproj \
	evtx_test_template_definition/evtx_test_template_definition.vcproj \
	evtxexport/evtxexport.vcproj \
	evtxinfo/evtxinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libevtx/libevtx.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libregf/libregf.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	pyevtx/pyevtx.vcproj \
	libevtx.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

